--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.9.0
   flutter_bloc: ^9.1.1
+  bloc: ^9.1.0
+  meta: ^1.16.0
 
 dev_dependencies:
   flutter_test:
