--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,10 @@ dependencies:
   flutter_bloc: ^9.1.1
   bloc: ^9.1.0
   meta: ^1.16.0
-
+  get: ^4.7.2
+  loading_animation_widget: ^1.3.0
+  flutter_animate: ^4.5.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -71,23 +74,25 @@ flutter:
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  assets:
+    - assets/
+
+  fonts:
+    - family: ClashGrotesk
+      fonts:
+        - asset: assets/fonts/ClashGrotesk-Extralight.otf
+          weight: 200   # ExtraLight
+        - asset: assets/fonts/ClashGrotesk-Light.otf
+          weight: 300   # Light
+        - asset: assets/fonts/ClashGrotesk-Regular.otf
+          weight: 400   # Regular
+        - asset: assets/fonts/ClashGrotesk-Medium.otf
+          weight: 500   # Medium
+        - asset: assets/fonts/ClashGrotesk-Semibold.otf
+          weight: 600   # SemiBold
+        - asset: assets/fonts/ClashGrotesk-Bold.otf
+          weight: 700   # Bold
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
