--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   dio: ^5.9.0
+  equatable: ^2.0.7
   flutter_bloc: ^9.1.1
   bloc: ^9.1.0
   meta: ^1.16.0
   get: ^4.7.2
   loading_animation_widget: ^1.3.0
   flutter_animate: ^4.5.2
+  mocktail: ^1.0.4
+  bloc_test: ^10.0.0
   
 dev_dependencies:
   flutter_test:
